fix alignment issues

--- a/src/index.css
+++ b/src/index.css
@@ -59,12 +59,29 @@ body {
   height: 100vh;
 }
 
+.main-content-area {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-grow: 1;
+  height: 100%;
+}
+
 .step-content {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   max-width: 100%;
+}
+
+.step-footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  background-color: var(--Alabaster);
+  width: 100%;
 }
 
 .step1-container {
@@ -77,7 +94,6 @@ body {
   padding: 1.2rem;
   max-width: 90%;
   min-height: 350px;
-  margin-bottom: 12rem;
 }
 
 .step1-header,
@@ -154,15 +170,6 @@ body {
   border: 1px solid var(--Cool-gray);
   cursor: pointer;
   border-radius: 5px;
-}
-
-.step-footer {
-  align-self: flex-end;
-  background-color: var(--Alabaster);
-  width: 100%;
-  padding: 2rem;
-  display: flex;
-  justify-content: space-between;
 }
 
 .next-button.disabled {
@@ -244,11 +251,6 @@ body {
   border-radius: 1.3rem;
   max-width: 100%;
   width: 324px;
-  margin-bottom: 7.6rem;
-}
-
-.step3-container {
-  margin-bottom: 15.8rem;
 }
 
 .plan-selection-container,
@@ -452,7 +454,6 @@ body {
 
 .step4-container {
   padding: 1rem 1.5rem;
-  margin-bottom: 16.9rem;
 }
 
 .finishing-up-container {
@@ -546,7 +547,6 @@ body {
 
 .step5-container {
   padding: 5rem 1rem;
-  margin-bottom: 14.2rem;
   min-height: 380px;
 }
 
